--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ function init(){
  var Team = ["Team ", "Group ", "Squad ", "Crew"];
  var home = ["home", "house", "basement", "flat", "apartment", "place", "residance"];
  var Home = ["Home ", "House ", "Basement ", "Flat ", "Apartment ", "Place ", "Residance"];
- var professional = ["professional", "expert", "accomplished", "skillful", "excellent", "skilled", "experienced"];
- var Professional = ["Professional ", "Expert ", "Accomplished ", "Skillful ", "Excellent ", "Skilled ", "Experienced"];
+ var professional = ["professional", "expert", "accomplished", "skillful", "skilled", "experienced"];
+ var Professional = ["Professional ", "Expert ", "Accomplished ", "Skillful ", "Skilled ", "Experienced"];
  var neat = ["neat", "tidy", "well ordered"];
  var Neat = ["Neat ", "Tidy ", "Well ordered"];
  var friendly = ["friendly", "amiable", "affable"];
@@ -193,7 +193,7 @@ function init(){
 			  "They recommended some things we could do to help with the dampness and even had suggestions on where we could find the best prices.",
 			  "They were here for a few days and the guys were professional and kind.",
 			  "The job was done right and now no more mold.",
-			  "Did a good job and remediated our attic issue, with a guarantee on treated surfaces."
+			  "Did a good job and remediated our attic issue, with a guarantee on treated surfaces.",
 			  "They even noticed some mold that a different mold inspector missed, which saved us a lot of hassle.",
 			  "They showed up on time and called with an explanation of the report. Highly recommended for their professionalism. Also competitive on price and won't test things that aren't explicitly needed to determine if there's mold.", 
 			  "He was patient in answering all my questions.", 
@@ -210,8 +210,8 @@ function init(){
  var phrase = GoodWords[rand1] + " " + mold1[rand2] +
         " " + mold2[rand3] + " " + LastWords[rand4] ;
  var phrase1 = phrase.replace("carpet", "mold");
- var professional = ["professional", "accomplished", "skillful", "excellent", "skilled", "experienced"];
- var Professional = ["Professional ", "Accomplished ", "Skillful ", "Excellent ", "Skilled ", "Experienced"];
+ var professional = ["professional", "accomplished", "skillful", "skilled", "experienced"];
+ var Professional = ["Professional ", "Accomplished ", "Skillful ", "Skilled ", "Experienced"];
  var technician = ["technician", "expert", "specialist"];
  var Technician = ["Technician ", "Expert ", "Specialist"];
  var GoodAltIn = ["good", "well", "awesome", "pretty", "best", "superb", "super", "great", "excellent", "fantastic", "amazing"];
