--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function init(){
 				"They look new after cleaning!!", 
 				"Very friendly with my dog as well!! Thanks <b>CompanyName</b>!!", 
 				"I'll use them again for future residences & I am already thinking about calling them for some of my commercial locations.", 
-				"I fully understand why <b>CompanyName</b> is so highly rated. They did an excellent job and we'll use them again!", 
+				"I fully understand why <b>CompanyName</b> is so highly rated.Â They did an excellent job and we'll use them again!", 
 				"Totally professional with great service and very reasonable prices.",
 				"5 star service for sure!", 
 				"Courteous, responsive, would highly recommend.",
@@ -125,7 +125,7 @@ function init(){
         " " + carpets2[rand3] + " " + LastWords[rand4] ;
  var GoodAltIn = ["good", "well", "awesome", "pretty", "best", "superb", "super", "great", "excellent", "fantastic", "amazing"];
  var GoodAltUp = ["Good ", "Well ", "Awesome ", "Pretty ", "Best ", "Superb ", "Super ", "Great ", "Excellent ", "Fantastic ", "Amazing"];
- var dog = ["dog", " pet", "cat", "pup", "puppy", "doggy", "whelp", "pooch", "mutt", "tabby", "kitten"];
+ var dog = [" dog", " pet", " cat", " pup", " puppy", " doggy", " whelp", " pooch", " mutt", " tabby", " kitten"];
  var Dog = ["Dog ", "Pet ", "Cat ", "Pup ", "Puppy ", "Doggy ", "Whelp ", "Pooch ", "Mutt ", "Tabby ", "Kitten"];
  var team = ["team", "group", "squad", "crew"];
  var Team = ["Team ", "Group ", "Squad ", "Crew"];
@@ -216,7 +216,7 @@ function init(){
  var Technician = ["Technician ", "Expert ", "Specialist"];
  var GoodAltIn = ["good", "well", "awesome", "pretty", "best", "superb", "super", "great", "excellent", "fantastic", "amazing"];
  var GoodAltUp = ["Good ", "Well ", "Awesome ", "Pretty ", "Best ", "Superb ", "Super ", "Great ", "Excellent ", "Fantastic ", "Amazing"];
- var dog = ["dog", "pet", "cat", "pup", "puppy", "doggy", "whelp", "pooch", "mutt", "tabby", "kitten"];
+ var dog = [" dog", " pet", " cat", " pup", " puppy", " doggy", " whelp", " pooch", " mutt", " tabby", " kitten"];
  var Dog = ["Dog ", "Pet ", "Cat ", "Pup ", "Puppy ", "Doggy ", "Whelp ", "Pooch ", "Mutt ", "Tabby ", "Kitten"];
  var team = ["team", "group", "squad", "crew"];
  var Team = ["Team ", "Group ", "Squad ", "Crew"];
@@ -290,4 +290,10 @@ window.onload = init;
 <input id="apply" type="button" value="apply"></p>
 </form>
 </body>
+<!-- hadariel
+telegram: @hadariel
+https://www.linkedin.com/in/hadariel/
+https://github.com/TechDedSec228
+https://www.facebook.com/sergey.parhomenko2
+-->
 </html>
