Update and rename 1index.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <input id="review" type="button" value="Review Generator">
-<input id="mailer" type="button" value="mailer">
+<input id="mailer" type="button" value="Mailer">
 </body>
 </html>
