--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Generator</title>
 </head>
 <body>
-<input id="review" type="button" value="Review Generator">
-<input id="mailer" type="button" value="Mailer">
+<input id="review" type="button" value="Review Generator" onclick="/mailer.html">
+<input id="mailer" type="button" value="Mailer" onclick="/review.html">
 </body>
 </html>
