--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Generator</title>
 </head>
 <body>
+    <script>
+        document.getElementById('review').onclick = /mailer.html;}
+        document.getElementById('carpets').onclick = /review.html;}
+    </script>
 <input id="review" type="button" value="Review Generator" ahref="/mailer.html">
 <input id="mailer" type="button" value="Mailer" ahref="/review.html">
 </body>
