--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Generator</title>
 </head>
 <body>
-    <script>
-        document.getElementById('review').onclick = /mailer.html;}
-        document.getElementById('carpets').onclick = /review.html;}
-    </script>
-<input id="review" type="button" value="Review Generator" ahref="/mailer.html">
-<input id="mailer" type="button" value="Mailer" ahref="/review.html">
+<button onclick="review.html" value="Review Generator">Review Generator </button>
+<button onclick="mailer.html" value="Mailer">Mailer </button>
 </body>
 </html>
