--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Generator</title>
 </head>
 <body>
-<button onclick="review.html" value="Review Generator">Review Generator </button>
-<button onclick="mailer.html" value="Mailer">Mailer </button>
+<button onClick='location.href="/review.html"' value="Review Generator">Review Generator </button>
+<button onClick='location.href="/mailer.html"' value="Mailer">Mailer </button>
 </body>
 </html>
