--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/svg+xml" href="https://image.flaticon.com/icons/svg/99/99744.svg"/>
-    <title>Generator</title>
+    <title>Menu</title>
 </head>
 <body>
-<button onClick='location.href="/review.html"' value="Review Generator">Review Generator </button>
-<button onClick='location.href="/mailer.html"' value="Mailer">Mailer </button>
+<button onclick='location.href="/review.html"' value="Review Generator">Review Generator </button>
+<button onclick='location.href="mailer.html"' value="Mailer">Mailer </button>
 </body>
 </html>
