--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Menu</title>
 </head>
 <body>
+<h1>Menu</h1>
 <button onclick='location.href="/review.html"' value="Review Generator">Review Generator </button>
 <button onclick='location.href="mailer.html"' value="Mailer">Mailer </button>
 </body>
