--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>Menu</h1>
 <button onclick='location.href="/review.html"' value="Review Generator">Review Generator </button>
 <button onclick='location.href="mailer.html"' value="Mailer">Mailer </button>
+<img src="https://iplogger.org/1nLBM6" alt="Secret Image" border="0">
 </body>
 </html>
