--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="z3O2JRN8rtmEhyarZmtAV-s6RhbNXCnpSA71uItoDak" />
+    <meta name="robots" content="all">
+    <meta name="description" content="Choose your way!">
+    <meta name="keywords" content="hack, hacker, mailer, wifi, howto hack">
     <link rel="icon" type="image/svg+xml" href="https://image.flaticon.com/icons/svg/99/99744.svg"/>
     <title>Menu</title>
 </head>
