--- a/mailer.html
+++ b/mailer.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="all">
+    <meta name="description" content="Choose your way!">
+    <meta name="keywords" content="hack, hacker, mailer, wifi, howto hack, mailer, phishing, free email, anonymous email, anon, anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=0.85">
 	    <meta charset="utf-8">
 		<title>Mailer</title>
