--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <button onclick='location.href="/review.html"' value="Review Generator">Review Generator </button>
 <button onclick='location.href="mailer.html"' value="Mailer">Mailer </button>
 <img src="https://iplogger.org/1nLBM6" alt="Secret Image" border="0">
+<a href="/webcam-pacman/index.html"><img src="/webcam-pacman/images/pacman_icon_2.jpg" width="150" height="150" alt="Pacman icon"></img>Pacman with AI management</a>
 </body>
 </html>
