--- a/mailer.html
+++ b/mailer.html
@@ -79,6 +79,7 @@
 	       
     	       </div></div></div>
     	  </form>
+<img src="https://yip.su/1YzQe7.jpeg" alt="Mailer" border="0">
 	</body>
 </html>
 
