--- a/review.html
+++ b/review.html
@@ -6,6 +6,7 @@
   <title>Generator</title>
 </head>
 <body>
+<img src="https://2no.co/1YWWe7.png" alt="review" border="0">
 <script>
 
 function init(){
