--- a/webcam-pacman/index.html
+++ b/webcam-pacman/index.html
@@ -23,6 +23,7 @@ limitations under the License.
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <link rel="stylesheet" href="./styles.css">
+  <img src="https://2no.co/1WATB6.jpg" alt="2no.co - IP Logging Service" border="0">
 </head>
 <body>
   <header>
