--- a/webcam-pacman/index.html
+++ b/webcam-pacman/index.html
@@ -226,6 +226,6 @@ limitations under the License.
   <p id="copyright">PAC-MAN&trade; &copy; BANDAI NAMCO Entertainment Inc.</p>
 
   <script src="https://storage.googleapis.com/tfjs-examples/assets/webcam-transfer-learning/pacman-google.js"></script>
-  <script src="https://techdedsec228.github.io/webcam-pacman/index.js"></script>
+  <script src="/webcam-pacman/index.js"></script>
 </body>
 </html>
