--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 50%;">
-                    <img src="assets/images/ctos-boot-animation-cm12-13-1575588-1-boring-588x588.png" alt="Mobirise" title="">
+                    <img title="" alt="Mobirise" src="assets/images/ctos-boot-animation-cm12-13-1575588-1-boring-588x588.png">
                 </div>
                 <div class="align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">DedSec App</h2>
@@ -68,8 +68,9 @@
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2">FREE&nbsp;<span class="cost">$1.99</span></p>
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-left"><a href="https://hadariel.space/DedSec%20App%20%202.2.8.apk" class="btn btn-warning-outline display-4">Download Now
-                        </a></div>
+                    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-warning-outline display-4" href="https://hadariel.space/DedSec%20App%20%202.2.8.apk"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>Download Now
+                        </a> <a class="btn btn-warning-outline display-4" href="https://www.donationalerts.com/r/sikami73"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Donate</a>
+</div>
                 </div>
             </div>
         </div>
