--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <!--Btn-->
                     <div class="mbr-section-btn pt-3 align-left"><a href="https://hadariel.space/DedSec%20App%20%202.2.8.apk" class="btn btn-warning-outline display-4"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>Download Now
-                        </a> <a href="https://www.donationalerts.com/r/sikami73" class="btn btn-warning-outline display-4"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Donate</a></div>
+                        </a> <a class="btn btn-warning-outline display-4" href="https://www.donationalerts.com/r/sikami73" target="_blank"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Donate</a></div>
                 </div>
             </div>
         </div>
