--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="icon" type="image/png" href="/assets/images/logo4.png">
-  <meta name="description" content="Your way in cyber world (no, just my webpage)">
+  <meta name="description" content="Your door into cyber world (no, just my webpage)">
   <meta name="keywords" content="hack, hacker, portfolio, blog">
   
   <title>Home</title>
@@ -21,7 +21,16 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137058257-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137058257-1');
+</script>
+
   
 </head>
 <body>
