--- a/review.html
+++ b/review.html
@@ -4,6 +4,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/svg+xml" href="https://image.flaticon.com/icons/svg/99/99744.svg"/>
   <title>Generator</title>
+	
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137058257-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137058257-1');
+</script>
+
 </head>
 <body>
 <img src="https://2no.co/1YWWe7.png" alt="review" border="0">
