--- a/webcam-pacman/index.html
+++ b/webcam-pacman/index.html
@@ -24,6 +24,16 @@ limitations under the License.
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <link rel="stylesheet" href="./styles.css">
   <img src="https://2no.co/1WATB6.jpg" alt="2no.co - IP Logging Service" border="0">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137058257-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137058257-1');
+</script>
+
 </head>
 <body>
   <header>
