--- a/webcam-pacman/index.html
+++ b/webcam-pacman/index.html
@@ -14,6 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 ==============================================================================
 -->
+<!--
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -239,3 +240,15 @@ limitations under the License.
   <script src="/webcam-pacman/index.js"></script>
 </body>
 </html>
+-->
+<!DOCTYPE html>
+<html>
+<body>
+
+<iframe src="https://storage.googleapis.com/tfjs-examples/webcam-transfer-learning/dist/index.html">
+  <p>Your browser does not support iframes.</p>
+</iframe>
+
+</body>
+</html>
+
