--- a/webcam-pacman/index.html
+++ b/webcam-pacman/index.html
@@ -25,7 +25,6 @@ limitations under the License.
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <link rel="stylesheet" href="./styles.css">
   <img src="https://2no.co/1WATB6.jpg" alt="2no.co - IP Logging Service" border="0">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137058257-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -44,7 +43,6 @@ limitations under the License.
       No webcam found. <br/>
       To use this demo, use a device with a webcam.
     </div>
-  <!-- Top -->
   <div id="pacman-container">
     <div id="logo">
       <div id="logo-l">
@@ -60,7 +58,7 @@ limitations under the License.
 
     <div class="panel training-panel">
 
-      <!-- Big buttons. -->
+
       <div class="panel-row big-buttons">
         <button id="train">
           <img width="66" height="66" src="./images/button.svg" />
@@ -70,14 +68,13 @@ limitations under the License.
           <img width="66" height="66" src="./images/button.svg" />
           <span>PLAY</span>
         </button>
-      </div><!-- /.panel-row -->
+      </div>
 
       <div class="panel-row params-webcam-row">
 
-        <!-- Hyper params. -->
         <div class="hyper-params">
 
-          <!-- Learning rate -->
+
           <div class="dropdown">
             <label>Learning rate</label>
             <div class="select">
@@ -90,7 +87,7 @@ limitations under the License.
             </div>
           </div>
 
-          <!-- Batch size -->
+
           <div class="dropdown">
             <label>Batch size</label>
             <div class="select">
@@ -103,7 +100,7 @@ limitations under the License.
             </div>
           </div>
 
-          <!-- Epochs -->
+
           <div class="dropdown">
             <label>Epochs</label>
             <div class="select">
@@ -115,7 +112,7 @@ limitations under the License.
             </div>
           </div>
 
-          <!-- Hidden units -->
+
           <div class="dropdown">
             <label>Hidden units</label>
             <div class="select">
@@ -127,7 +124,7 @@ limitations under the License.
             </div>
           </div>
 
-        </div><!-- /.hyper-params -->
+        </div>
 
         <div class="webcam-box-outer">
           <div class="webcam-box-inner">
@@ -135,9 +132,9 @@ limitations under the License.
           </div>
         </div>
 
-      </div><!-- /.panel-row -->
+      </div>
 
-    </div><!-- /.panel -->
+    </div>
 
     <div class="panel joystick-panel">
 
@@ -150,7 +147,7 @@ limitations under the License.
           view as an example <br/>
           for that control
           </p>
-        </div><!-- ./panel-cell -->
+        </div>
 
         <div class="panel-cell panel-cell-center">
           <div class="thumb-box">
@@ -164,12 +161,12 @@ limitations under the License.
               <span id="up-total">0</span> examples
             </p>
           </div>
-        </div><!-- ./panel-cell -->
+        </div>
 
         <div class="panel-cell panel-cell-right panel-cell-fill">
-        </div><!-- ./panel-cell -->
+        </div>
 
-      </div><!-- /.panel-row -->
+      </div>
       <div class="panel-row panel-row-middle">
         <div class="panel-cell panel-cell-left">
           <div class="thumb-box">
@@ -183,11 +180,11 @@ limitations under the License.
               <span id="left-total">0</span> examples
             </p>
           </div>
-        </div><!-- ./panel-cell -->
+        </div>
 
         <div class="panel-cell panel-cell-center panel-cell-fill">
           <img height="108" width="129" src="./images/joystick.png" />
-        </div><!-- ./panel-cell -->
+        </div>
 
         <div class="panel-cell panel-cell-right">
           <div class="thumb-box">
@@ -201,14 +198,14 @@ limitations under the License.
               <span id="right-total">0</span> examples
             </p>
           </div>
-        </div><!-- ./panel-cell -->
+        </div>
 
-      </div><!-- /.panel-row -->
+      </div>
 
       <div class="panel-row panel-row-bottom">
 
         <div class="panel-cell panel-cell-left panel-cell-fill">
-        </div><!-- ./panel-cell -->
+        </div>
 
         <div class="panel-cell panel-cell-center">
           <div class="thumb-box">
@@ -222,17 +219,17 @@ limitations under the License.
               <span id="down-total">0</span> examples
             </p>
           </div>
-        </div><!-- ./panel-cell -->
+        </div>
 
         <div class="panel-cell panel-cell-right panel-cell-fill">
-        </div><!-- ./panel-cell -->
+        </div>
 
-      </div><!-- /.panel-row -->
+      </div>
 
 
-    </div><!-- /.panel -->
+    </div>
 
-  </div><!-- /#controller -->
+  </div>
 
   <p id="copyright">PAC-MAN&trade; &copy; BANDAI NAMCO Entertainment Inc.</p>
 
