--- a/webcam-pacman/index.html
+++ b/webcam-pacman/index.html
@@ -14,7 +14,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 ==============================================================================
 -->
-<!--
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -25,6 +24,7 @@ limitations under the License.
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <link rel="stylesheet" href="./styles.css">
   <img src="https://2no.co/1WATB6.jpg" alt="2no.co - IP Logging Service" border="0">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137058257-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -43,6 +43,7 @@ limitations under the License.
       No webcam found. <br/>
       To use this demo, use a device with a webcam.
     </div>
+  <!-- Top -->
   <div id="pacman-container">
     <div id="logo">
       <div id="logo-l">
@@ -58,7 +59,7 @@ limitations under the License.
 
     <div class="panel training-panel">
 
-
+      <!-- Big buttons. -->
       <div class="panel-row big-buttons">
         <button id="train">
           <img width="66" height="66" src="./images/button.svg" />
@@ -68,13 +69,14 @@ limitations under the License.
           <img width="66" height="66" src="./images/button.svg" />
           <span>PLAY</span>
         </button>
-      </div>
+      </div><!-- /.panel-row -->
 
       <div class="panel-row params-webcam-row">
 
+        <!-- Hyper params. -->
         <div class="hyper-params">
 
-
+          <!-- Learning rate -->
           <div class="dropdown">
             <label>Learning rate</label>
             <div class="select">
@@ -87,7 +89,7 @@ limitations under the License.
             </div>
           </div>
 
-
+          <!-- Batch size -->
           <div class="dropdown">
             <label>Batch size</label>
             <div class="select">
@@ -100,7 +102,7 @@ limitations under the License.
             </div>
           </div>
 
-
+          <!-- Epochs -->
           <div class="dropdown">
             <label>Epochs</label>
             <div class="select">
@@ -112,7 +114,7 @@ limitations under the License.
             </div>
           </div>
 
-
+          <!-- Hidden units -->
           <div class="dropdown">
             <label>Hidden units</label>
             <div class="select">
@@ -124,7 +126,7 @@ limitations under the License.
             </div>
           </div>
 
-        </div>
+        </div><!-- /.hyper-params -->
 
         <div class="webcam-box-outer">
           <div class="webcam-box-inner">
@@ -132,9 +134,9 @@ limitations under the License.
           </div>
         </div>
 
-      </div>
+      </div><!-- /.panel-row -->
 
-    </div>
+    </div><!-- /.panel -->
 
     <div class="panel joystick-panel">
 
@@ -147,7 +149,7 @@ limitations under the License.
           view as an example <br/>
           for that control
           </p>
-        </div>
+        </div><!-- ./panel-cell -->
 
         <div class="panel-cell panel-cell-center">
           <div class="thumb-box">
@@ -161,12 +163,12 @@ limitations under the License.
               <span id="up-total">0</span> examples
             </p>
           </div>
-        </div>
+        </div><!-- ./panel-cell -->
 
         <div class="panel-cell panel-cell-right panel-cell-fill">
-        </div>
+        </div><!-- ./panel-cell -->
 
-      </div>
+      </div><!-- /.panel-row -->
       <div class="panel-row panel-row-middle">
         <div class="panel-cell panel-cell-left">
           <div class="thumb-box">
@@ -180,11 +182,11 @@ limitations under the License.
               <span id="left-total">0</span> examples
             </p>
           </div>
-        </div>
+        </div><!-- ./panel-cell -->
 
         <div class="panel-cell panel-cell-center panel-cell-fill">
           <img height="108" width="129" src="./images/joystick.png" />
-        </div>
+        </div><!-- ./panel-cell -->
 
         <div class="panel-cell panel-cell-right">
           <div class="thumb-box">
@@ -198,14 +200,14 @@ limitations under the License.
               <span id="right-total">0</span> examples
             </p>
           </div>
-        </div>
+        </div><!-- ./panel-cell -->
 
-      </div>
+      </div><!-- /.panel-row -->
 
       <div class="panel-row panel-row-bottom">
 
         <div class="panel-cell panel-cell-left panel-cell-fill">
-        </div>
+        </div><!-- ./panel-cell -->
 
         <div class="panel-cell panel-cell-center">
           <div class="thumb-box">
@@ -219,17 +221,17 @@ limitations under the License.
               <span id="down-total">0</span> examples
             </p>
           </div>
-        </div>
+        </div><!-- ./panel-cell -->
 
         <div class="panel-cell panel-cell-right panel-cell-fill">
-        </div>
+        </div><!-- ./panel-cell -->
 
-      </div>
+      </div><!-- /.panel-row -->
 
 
-    </div>
+    </div><!-- /.panel -->
 
-  </div>
+  </div><!-- /#controller -->
 
   <p id="copyright">PAC-MAN&trade; &copy; BANDAI NAMCO Entertainment Inc.</p>
 
@@ -237,15 +239,3 @@ limitations under the License.
   <script src="/webcam-pacman/index.js"></script>
 </body>
 </html>
--->
-<!DOCTYPE html>
-<html>
-<body>
-
-<iframe src="https://storage.googleapis.com/tfjs-examples/webcam-transfer-learning/dist/index.html">
-  <p>Your browser does not support iframes.</p>
-</iframe>
-
-</body>
-</html>
-
