--- a/index.html
+++ b/index.html
@@ -31,6 +31,42 @@
   gtag('config', 'UA-137058257-1');
 </script>
 
+
+<!-- schema.org start -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Hadariel Heilige",
+  "url": "https://hadariel.space/",
+  "image": "https://hadariel.space/tshirt_back2.png",
+  "sameAs": [
+    "https://www.youtube.com/channel/UCQDqxiDlM2Vcrt38jTRQI7g",
+    "https://www.linkedin.com/in/hadariel/",
+    "https://github.com/TechDedSec228/",
+    "https://hadariel.space/",
+    "https://www.instagram.com/hadariel/"
+  ],
+  "jobTitle": "SEO-specialist, pentester, netstalker, sometimes coder...",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Freelancer"
+  }  
+}
+</script>
+<!-- schema.org end -->
+  
+  
+<!-- OpenGraph start --> 
+<meta property="og:title" content="Hadariel Heilige">
+<meta property="og:site_name" content="Home">
+<meta property="og:url" content="https://hadariel.space/">
+<meta property="og:description" content="SEO-specialist, pentester, netstalker, sometimes coder...">
+<meta property="og:type" content="profile">
+<meta property="og:image" content="https://hadariel.space/tshirt_back2.png">
+<meta property="og:image" content="https://hadariel.space/tshirt.png">
+<!-- OpenGraph end -->
+  
   
 </head>
 <body>
@@ -68,7 +104,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 50%;">
-                    <img src="assets/images/ctos-boot-animation-cm12-13-1575588-1-boring-588x588.png" alt="Mobirise" title="">
+                    <img src="assets/images/ctos-boot-animation-cm12-13-1575588-1-boring-588x588.png" alt="DedSec App" title="DedSec App">
                 </div>
                 <div class="align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">DedSec App</h2>
