--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <meta property="og:image" content="https://hadariel.space/tshirt.png">
 <!-- OpenGraph end -->
   
+ <link rel="canonical" href="http://hadariel.space/index.html"/>
   
 </head>
 <body>
