--- a/checker.html
+++ b/checker.html
@@ -17,7 +17,8 @@
 
 
 
-
+		<h1>Test for SEO Checker</h1>
+		<img src="/flat-800x800-070-f-u6.png" alt="<script>alert('alt')</script>" title="<script>alert('title')</script>">
 
 
 
