--- a/checker.html
+++ b/checker.html
@@ -18,7 +18,7 @@
 
 
 		<h1>Test for SEO Checker</h1>
-		<img src="/flat-800x800-070-f-u6.png" alt="<script>alert('alt')</script>" title="<script>alert('title')</script>">
+		<img src="/flat-800x800-070-f-u6.png" alt="XSS in Alt tag<script>alert('alt')</script>" title="XSS in Title tag<script>alert('title')</script>">
 
 
 
