--- a/charachter-counter/index.html
+++ b/charachter-counter/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/svg+xml" href="https://image.flaticon.com/icons/svg/99/99744.svg"/>
-  <title>Generator</title>
+  <link rel="icon" type="image/png" href="/assets/images/logo4.png">
+  <title>Charachter counter</title>
 	
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
