--- a/charachter-counter/index.html
+++ b/charachter-counter/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/assets/images/logo4.png">
-  <title>Charachter counter</title>
+  <title>Character counter</title>
 	
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
