--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Hᴀᴅᴀʀɪᴇʟ Hᴇɪʟɪɢᴇ</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">SEO-specialist, pentester, netstalker, sometimes coder...</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/mailer.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Mailer<br></a> <a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/review.html"><span class="mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>Review Generator<br></a> <a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/webcam-pacman/index.html">Pacman with<br>AI management</a><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/character-counter/">Character<br>counter</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/mailer.html"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Mailer<br></a> <a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/review.html"><span class="mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>Review Generator<br></a> <a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/webcam-pacman/">Pacman with<br>AI management</a><a class="btn btn-md btn-white-outline display-4" href="https://hadariel.space/character-counter/">Character<br>counter</a></div>
             </div>
         </div>
     </div>
