--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -16,7 +16,7 @@
 </script>
 
 </head>
- <body>
+ <body background="/680341.jpg">
 	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;" allowtransparency="true"></iframe> 
  </body>
  <!-- hadariel
