--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -15,8 +15,16 @@
   gtag('config', 'UA-137058257-1');
 </script>
 
+<style>
+	body {
+  background-image: url("./680341.jpg");
+  width: auto;
+  height: auto;
+}
+</style>
+	
 </head>
- <body background="/680341.jpg">
+ <body>
 	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;" allowtransparency="true"></iframe> 
  </body>
  <!-- hadariel
