--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -16,10 +16,12 @@
 </script>
 
 <style>
-	body {
-  background-image: url("./680341.jpg");
-  width: auto;
-  height: auto;
+	html { 
+  background: url("./680341.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 </style>
 	
