--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -27,7 +27,7 @@
 	
 </head>
  <body>
-	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
+	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
  </body>
  <!-- hadariel
 telegram: @hadariel
