--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 <!-- OpenGraph end -->
   
  <link rel="canonical" href="http://hadariel.space/index.html"/>
-  
+
+<meta name="mailru-domain" content="ziEcCnL87fkGXcQI" />  
 </head>
 <body>
   <section class="cid-qTkA127IK8 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=dGcEsIrFYIA" id="header2-1">
