--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 <meta property="og:image" content="https://hadariel.space/tshirt.png">
 <!-- OpenGraph end -->
   
- <link rel="canonical" href="http://hadariel.space/index.html"/>
+ <link rel="canonical" href="http://hadariel.space/"/>
 
-<meta name="mailru-domain" content="ziEcCnL87fkGXcQI" />  
+<meta name="mailru-domain" content="ziEcCnL87fkGXcQI" />
+<meta name="yandex-verification" content="1a39f912434899cb" />
 </head>
 <body>
   <section class="cid-qTkA127IK8 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=dGcEsIrFYIA" id="header2-1">
