--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -23,10 +23,30 @@
   -o-background-size: cover;
   background-size: cover;
 }
+	
+.topbutton {
+width:100px;
+border:2px solid #ccc;
+background:#000000;
+text-align:center;
+padding:10px;
+position:fixed;
+top:50px;
+left:50px;
+cursor:pointer;
+color:#20C20E;
+font-family: Verdana,Geneva,sans-serif; 
+font-size:12px;
+border-radius: 5px;
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+-khtml-border-radius: 5px;
+}
 </style>
 	
 </head>
  <body>
+	 <a href="/" title="Come back at home" class="topbutton">Home🏠10ca1h05t</a>
 	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
  </body>
  <!-- hadariel
