--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -23,7 +23,11 @@
   -o-background-size: cover;
   background-size: cover;
 }
-	
+
+@font-face {
+            font-family: 17608;
+            src: url(./17608.ttf);}
+
 .topbutton {
 width:100px;
 border:2px solid #ccc;
@@ -31,11 +35,12 @@ background:#000000;
 text-align:center;
 padding:10px;
 position:fixed;
+z-index: 999999;
 top:50px;
 left:50px;
 cursor:pointer;
 color:#20C20E;
-font-family: Verdana,Geneva,sans-serif; 
+font-family: 17608,Verdana,sans-serif; 
 font-size:12px;
 border-radius: 5px;
 -moz-border-radius: 5px;
@@ -46,7 +51,7 @@ border-radius: 5px;
 	
 </head>
  <body>
-	 <a href="/" title="Come back at home" class="topbutton">Home🏠10ca1h05t</a>
+	 <a href="/" title="Come back at home" class="topbutton">Home 🏠<br>10ca1h05t</a>
 	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
  </body>
  <!-- hadariel
