--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -25,7 +25,7 @@
 }
 
 @font-face {
-            font-family: 17608;
+            font-family: console;
             src: url(./17608.ttf);}
 
 .topbutton {
@@ -40,7 +40,7 @@ top:50px;
 left:15px;
 cursor:pointer;
 color:#20C20E;
-font-family: 17608,Verdana,sans-serif; 
+font-family: console,Verdana,sans-serif; 
 font-size:12px;
 border-radius: 5px;
 -moz-border-radius: 5px;
@@ -51,7 +51,7 @@ border-radius: 5px;
 	
 </head>
  <body>
-	 <a href="/" title="Come back at home" class="topbutton">Home 🏠<br>10ca1h05t</a>
+	 <a href="/" title="Come back at home" class="topbutton">Home🏠<br>10ca1h05t</a>
 	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
  </body>
  <!-- hadariel
