--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -15,6 +15,16 @@
   gtag('config', 'UA-137058257-1');
 </script>
 
+<script>
+function onImg(x) {
+  x.style.opacity = "1";
+}
+
+function outImg(x) {
+  x.style.opacity = "0.5";
+}
+</script>	
+	
 <style>
 	html { 
   background: url("./680341.jpg") no-repeat center center fixed; 
@@ -46,12 +56,13 @@ border-radius: 5px;
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
 -khtml-border-radius: 5px;
+opacity:0.5;
 }
 </style>
 	
 </head>
  <body>
-	 <a href="/" title="Come back at home" class="topbutton">Home🏠<br>10ca1h05t</a>
+	 <a href="/" title="Come back at home" class="topbutton" onmouseover="onImg(this)" onmouseout="outImg(this)">Home🏠<br>10ca1h05t</a>
 	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
  </body>
  <!-- hadariel
