--- a/character-counter/index.html
+++ b/character-counter/index.html
@@ -24,16 +24,6 @@ function outImg(x) {
   x.style.opacity = "0.5";
 }
 </script>	
-	
-<script>
-function onFrame(x) {
-  x.style.z-index: "9999999";
-}
-function outFrame(x) {
-  x.style.z-index: "1";
-}
-</script>	
-	
 <style>
 	html { 
   background: url("./680341.jpg") no-repeat center center fixed; 
@@ -48,7 +38,7 @@ function outFrame(x) {
             src: url(./17608.ttf);}
 
 .topbutton {
-width:100px;
+width:60px;
 border:2px solid #ccc;
 background:#000000;
 text-align:center;
@@ -56,7 +46,7 @@ padding:10px;
 position:fixed;
 z-index: 999999;
 top:50px;
-left:15px;
+left:10px;
 cursor:pointer;
 color:#20C20E;
 font-family: console,Verdana,sans-serif; 
@@ -72,7 +62,7 @@ opacity:0.5;
 </head>
  <body>
 	 <a href="/" title="Come back at home" class="topbutton" onmouseover="onImg(this)" onmouseout="outImg(this)">Home🏠<br>10ca1h05t</a>
-	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0" onmouseover="onFrame(this)" onmouseout="outFrame(this)"></iframe> 
+	<iframe src="//www.charactercountonline.com/embed.php?language=en" style="border:0;width:100%;height:750px;opacity:0.92;" allowtransparency="true" scrolling="no" frameborder="0"></iframe> 
  </body>
  <!-- hadariel
 telegram: @hadariel
