--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2">FREE&nbsp;<span class="cost">$1.99</span></p>
                     </div>
                     <!--Btn-->
-                    <div class="mbr-section-btn pt-3 align-left"><a href="https://hadariel.space/DedSec%20App%20%202.2.8.apk" class="btn btn-warning-outline display-4"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>Download Now
+                    <div class="mbr-section-btn pt-3 align-left"><a href="https://github.com/TechDedSec228/DedSecApp_DECOMPILED/releases/download/v2.2.8/DedSec.App.2.2.8.apk" class="btn btn-warning-outline display-4"><span class="mbri-download mbr-iconfont mbr-iconfont-btn"></span>Download Now
                         </a> <a class="btn btn-warning-outline display-4" href="https://www.donationalerts.com/r/sikami73" target="_blank"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Donate</a></div>
                 </div>
             </div>
