--- a/1111.html
+++ b/1111.html
@@ -4,6 +4,14 @@
 <meta name="title" content="SEO Test meta-Title-tag" />
 <meta name="description" content="SEO Test meta-Title-tag" />
 <meta name="keywords" content="SEO, Test, meta, Title, tag" />
+
+<meta property="og:title" content="<script>alert('title');</script>">
+<meta property="og:site_name" content="<script>alert('name');</script>">
+<meta property="og:url" content="https://hadariel.space/1111.html">
+<meta property="og:description" content="<script>alert('desc');</script>">
+<meta property="og:type" content="website">
+<meta property="og:image" content="">
+
 </head>
 <body>
 <h1>SEO Test Title-tag</h1>
