--- a/1111.html
+++ b/1111.html
@@ -5,7 +5,7 @@
 <meta name="description" content="SEO Test meta-Title-tag" />
 <meta name="keywords" content="SEO, Test, meta, Title, tag" />
 
-<meta property="og:title" content="\";alert('XSS');//">
+<meta property="og:title" content="\;alert('XSS');//">
 <meta property="og:site_name" content="Set.constructor`alert\x28document.domain\x29```">
 <meta property="og:url" content="javascript:alert('XSS');">
 <meta property="og:description" content="¼script¾alert(¢XSS¢)¼/script¾">
