--- a/1111.html
+++ b/1111.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="javascript:alert('XSS');">
 <meta property="og:description" content="¼script¾alert(¢XSS¢)¼/script¾">
 <meta property="og:type" content="website">
-<meta property="og:image" content="">
+<meta property="og:image" content="./“><img src=x onerror=prompt(document.domain)>.jpg">
 
 </head>
 <body>
