--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2020 - All Rights Reserved
+                  © Copyright <script>getFullYear()</script> - All Rights Reserved
                 </p>
             </div>
         </div>
