--- a/index.html
+++ b/index.html
@@ -180,8 +180,10 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                  © Copyright <script>getFullYear()</script> - All Rights Reserved
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">                  
+<script>
+  document.write("© Copyright "+ new Date().getFullYear()+ " - All Rights Reserved");
+</script>
                 </p>
             </div>
         </div>
