--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -282,7 +282,9 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2020 - All Rights Reserved
+<script>
+  document.write("© Copyright "+ new Date().getFullYear()+ " - All Rights Reserved");
+</script>
                 </p>
             </div>
         </div>
